# simple-http-server

./: CMakeLists.txt  main.cpp  urls.h
handlers/: StaticFileHandler.cpp  StaticFileHandler.h
http/: Handler.cpp  Handler.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
http/headers/: HttpHeader.cpp  HttpHeader.h
static/: home.html  page2.html
utils/: string_utils.cpp  string_utils.h
